fix overflow

--- a/api/public/css/stylesheet.css
+++ b/api/public/css/stylesheet.css
@@ -20,7 +20,7 @@ html, body {
 .mainvideo {
     width: 50%;
     float: left;
-    height: 500px;
+    height: 100%;
     border: 1px solid blue;
     margin-right: 10px;
     padding: 10px;
